Enhance ScheduleInfo to include errorMessage field and update ScheduleService for improved error handling in schedule creation.